--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ background-repeat: no-repeat;
 background-size:cover;
 background-position:center;
 position: relative;
-background-attachment:fixed;
+background-attachment:scroll;
 }
 .horseimg{
     position: absolute;
