--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ background-attachment:scroll;
     /* animation-direction:alternate; */
 top: 0;
 right: 0;
+z-index: 2;
 }
 .dog{
     position: absolute;
@@ -65,6 +66,13 @@ right: 0;
     animation-iteration-count: infinite;
     z-index: 3;
 
+}
+
+.moon{
+    width: 100px;
+    right:50px;
+    top:70px;
+    position: absolute;
 }
 
 
